testing ajax call to 8504

--- a/webpage/loggedIn.html
+++ b/webpage/loggedIn.html
@@ -1,6 +1,6 @@
 <h5>You are now logged in</h5>
 <div id = "results">
-
+<div id = "results2"></div>
 </div>
 <script src="./js/jquery.js?tachyon.1.16"></script>
 <script src="./js/aws-cognito-sdk.min.js"></script>
